# deskcloud-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: __init__.py  cli.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  health.py  llms.py  sessions.py
app/api/schemas/: __init__.py  message.py  session.py
app/core/: __init__.py  events.py
app/db/: __init__.py  models.py  session.py
app/db/repositories/: __init__.py  session_repo.py
app/mcp/: __init__.py  context.py  server.py  tools.py
app/services/: __init__.py  agent_runner.py  display_manager.py  filesystem_manager.py  session_cleanup.py  session_manager.py
app/tools/: __init__.py  base.py  bash.py  collection.py  computer.py  edit.py  groups.py  loop.py  run.py
docker/: Dockerfile  entrypoint.sh
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  LIMITATIONS.md
docs/plans/: MASTER_ROADMAP.md  custom_image_builder.md  mcp_server_transformation.md  multi_os_support.md  multi_session_scaling.md  nextjs_landing_dashboard.md  opensource_release_checklist.md  remote_agent_client.md  session_filesystem_isolation.md  session_snapshots.md  session_video_recording.md
docs/postman/: README.md  claude-computer-use-api.postman_collection.json  claude-computer-use-api.postman_environment.json
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  sse.js
scripts/: pre_publish_check.sh
tests/: __init__.py  conftest.py  test_sessions.py  test_streaming.py
