[project]
name = "claude-computer-use-backend"
version = "1.0.0"
description = "FastAPI backend for Claude Computer Use agent with session management and real-time streaming"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Principal AI Specialist", email = "dev@example.com"}
]
keywords = ["claude", "computer-use", "ai-agent", "fastapi", "streaming"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

