[project]
name = "deskcloud-mcp"
version = "0.1.0"
description = "Open source MCP server for AI-controlled virtual desktops"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DeskCloud", email = "opensource@deskcloud.app"}
]
keywords = ["mcp", "ai-agents", "computer-use", "fastapi", "vnc", "novnc", "automation"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

