[metadata]
name = deskcloud-mcp
version = 0.1.0
description = Open source MCP server for AI-controlled virtual desktops
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    starlette>=0.27.0
    mcp>=1.0.0
    sqlalchemy>=2.0.0
    aiosqlite>=0.19.0
    pydantic>=2.5.0
    pydantic-settings>=2.1.0
    httpx>=0.25.0
    python-multipart>=0.0.6
    slowapi>=0.1.9
    bleach>=6.1.0
    anyio>=4.0.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    deskcloud-mcp = app.cli:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    ruff
    black
